--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
         var buildUrl = "Build";
         var loaderUrl = buildUrl + "/KSEA.loader.js";
         var config = {
-          dataUrl: buildUrl + "/KSEA.data.unityweb",
-          frameworkUrl: buildUrl + "/KSEA.framework.js.unityweb",
-          codeUrl: buildUrl + "/KSEA.wasm.unityweb",
+          dataUrl: buildUrl + "/KSEA.data",
+          frameworkUrl: buildUrl + "/KSEA.framework.js",
+          codeUrl: buildUrl + "/KSEA.wasm",
           streamingAssetsUrl: "StreamingAssets",
           companyName: "DefaultCompany",
           productName: "KSEA",
